# pqc-v2x-bench

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bench.yml
nightly/: README.md  report-arm64.md  report-x86_64.md  results-arm64.json  results-x86_64.json
src/pqc_v2x_bench/: __init__.py  algorithms.py  bench.py  cli.py  report.py
src/pqc_v2x_bench/baselines/: baseline_cortex_a78ae_homogeneous.json  baseline_i7_13620h.json  baseline_i7_13620h_homogeneous.json  baseline_rpi4_cortex_a72_legacy.json
tests/: test_algorithms.py  test_bench.py  test_report.py
